Add new Cake Contrib icon SVG to nuspec.
per http://cakebuild.net/blog/2017/06/new-cake-contrib-icon

--- a/Package.nuspec
+++ b/Package.nuspec
@@ -5,6 +5,7 @@
     <version>0.0.3</version>
     <authors>Adam Patridge</authors>
     <owners>Adam Patridge</owners>
+    <iconUrl>https://rawgithub.com/cake-contrib/graphics/master/svg/cake-contrib.svg</iconUrl>
     <licenseUrl>https://github.com/patridge/Cake.ArgumentHelpers/blob/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/patridge/Cake.ArgumentHelpers</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
