--- a/Cake.ArgumentHelpers.Tests/Cake.ArgumentHelpers.Tests.csproj
+++ b/Cake.ArgumentHelpers.Tests/Cake.ArgumentHelpers.Tests.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -43,7 +43,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArgumentOrEnvironmentVariableAliasTests.cs" />
+    <Compile Include="ArgumentOrEnvironmentVariableAlias_StringTests.cs" />
+    <Compile Include="ArgumentOrEnvironmentVariableAlias_BoolTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -53,6 +54,9 @@
       <Project>{9C50A7C4-E00D-4851-8311-81135D062C77}</Project>
       <Name>Cake.ArgumentHelpers</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
