--- a/Cake.ArgumentHelpers/packages.config
+++ b/Cake.ArgumentHelpers/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Cake.Common" version="0.21.0" targetFramework="net45" />
   <package id="Cake.Core" version="0.21.0" targetFramework="net45" />
+  <package id="NuGet.CommandLine" version="4.3.0" targetFramework="net45" developmentDependency="true" />
 </packages>
