--- a/Package.nuspec
+++ b/Package.nuspec
@@ -3,19 +3,16 @@
   <metadata>
     <id>Cake.ArgumentHelpers</id>
     <version>0.1.0</version>
-    <authors>Adam Patridge</authors>
-    <owners>Adam Patridge</owners>
+    <authors>cake-contrib</authors>
+    <owners>cake-contrib</owners>
     <iconUrl>https://rawgithub.com/cake-contrib/graphics/master/svg/cake-contrib.svg</iconUrl>
-    <licenseUrl>https://github.com/patridge/Cake.ArgumentHelpers/blob/master/LICENSE</licenseUrl>
-    <projectUrl>https://github.com/patridge/Cake.ArgumentHelpers</projectUrl>
+    <licenseUrl>https://github.com/cake-contrib/Cake.ArgumentHelpers/blob/master/LICENSE</licenseUrl>
+    <projectUrl>https://github.com/cake-contrib/Cake.ArgumentHelpers</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Cake add-on trying to make it easier to handle various inputs from arguments and environment variable.</description>
     <releaseNotes>Added string helper. Unit tests are also available/passing.</releaseNotes>
-    <copyright>Copyright (c) Adam Patridge 2017</copyright>
-    <tags>Cake Script Build</tags>
-
-    <dependencies>
-    </dependencies>
+    <copyright>Copyright (c) 2017-2021 Cake Contributors</copyright>
+    <tags>cake arguments args cake-addin cake-build cake-contrib addin script build</tags>
   </metadata>
 
   <files>
