--- a/Package.nuspec
+++ b/Package.nuspec
@@ -5,7 +5,7 @@
     <version>0.1.0</version>
     <authors>cake-contrib</authors>
     <owners>cake-contrib</owners>
-    <iconUrl>https://rawgithub.com/cake-contrib/graphics/master/svg/cake-contrib.svg</iconUrl>
+    <iconUrl>https://cdn.jsdelivr.net/gh/cake-contrib/graphics/png/addin/cake-contrib-addin-medium.png</iconUrl>
     <licenseUrl>https://github.com/cake-contrib/Cake.ArgumentHelpers/blob/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/cake-contrib/Cake.ArgumentHelpers</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
