--- a/Cake.ArgumentHelpers/Cake.ArgumentHelpers.csproj
+++ b/Cake.ArgumentHelpers/Cake.ArgumentHelpers.csproj
@@ -1,23 +1,24 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-	<PropertyGroup>
-		<AssemblyName>Cake.ArgumentHelpers</AssemblyName>
-		<TargetFrameworks>net6.0;net5.0;netcoreapp3.1</TargetFrameworks>
-		<OutputType>Library</OutputType>
-		<PlatformTarget>AnyCpu</PlatformTarget>
-		<GenerateDocumentationFile>true</GenerateDocumentationFile>
-	</PropertyGroup>
-    <!-- Package specific metadata -->
-	<PropertyGroup>
-		<Description>Cake aliases (methods) to help with consuming arguments and environment variables.</Description>
-	</PropertyGroup>
+  <PropertyGroup>
+    <AssemblyName>Cake.ArgumentHelpers</AssemblyName>
+    <TargetFrameworks>net6.0;net5.0;netcoreapp3.1</TargetFrameworks>
+    <OutputType>Library</OutputType>
+    <PlatformTarget>AnyCpu</PlatformTarget>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PackageIcon>images\icon.png</PackageIcon>
+    <PackageIconUrl>https://cdn.jsdelivr.net/gh/cake-contrib/graphics/png/addin/cake-contrib-addin-medium.png</PackageIconUrl>
+    <Description>Cake aliases (methods) to help with consuming arguments and environment variables.</Description>
+  </PropertyGroup>
     <!-- Import shared functionality -->
-	<Import Project="..\Shared.msbuild" />
-	<ItemGroup>
+  <Import Project="..\Shared.msbuild" />
+  <ItemGroup>
     <PackageReference Include="Cake.Core" Version="2.0.0" PrivateAssets="All" />
     <PackageReference Include="Cake.Common" Version="2.0.0" PrivateAssets="All" />
-	</ItemGroup>
+  </ItemGroup>
   <ItemGroup>
-    <None Include="..\cake-contrib-medium.png" Pack="true" PackagePath="" />
+    <None Include="..\asset\cake-argumenthelpers-nuget.png" Pack="true" Visible="false" PackagePath="images\icon.png" />
     <None Include="..\LICENSE" Pack="true" PackagePath="" />
   </ItemGroup>
 </Project>
