--- a/Cake.ArgumentHelpers/Cake.ArgumentHelpers.csproj
+++ b/Cake.ArgumentHelpers/Cake.ArgumentHelpers.csproj
@@ -1,33 +1,25 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-	<PropertyGroup>
-		<AssemblyName>Cake.ArgumentHelpers</AssemblyName>
-		<TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
-		<OutputType>Library</OutputType>
-		<PlatformTarget>AnyCpu</PlatformTarget>
-		<GenerateDocumentationFile>true</GenerateDocumentationFile>
-	</PropertyGroup>
-    <!-- Package specific metadata -->
-	<PropertyGroup>
-		<Description>Cake aliases (methods) to help with consuming arguments and environment variables.</Description>
-	</PropertyGroup>
+  <PropertyGroup>
+    <AssemblyName>Cake.ArgumentHelpers</AssemblyName>
+    <TargetFrameworks>net6.0;net5.0;netcoreapp3.1</TargetFrameworks>
+    <OutputType>Library</OutputType>
+    <PlatformTarget>AnyCpu</PlatformTarget>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PackageTags>cake;args;cake-addin;cake-build;addin;script;build</PackageTags>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageIcon>images\icon.png</PackageIcon>
+    <PackageIconUrl>https://cdn.jsdelivr.net/gh/cake-contrib/graphics/png/addin/cake-contrib-addin-medium.png</PackageIconUrl>
+    <Description>Cake aliases (methods) to help with consuming arguments and environment variables.</Description>
+  </PropertyGroup>
     <!-- Import shared functionality -->
-	<Import Project="..\Shared.msbuild" />
-	<ItemGroup>
-    <PackageReference Include="Cake.Core" Version="0.28.0" PrivateAssets="All" />
-    <PackageReference Include="Cake.Common" Version="0.28.0" PrivateAssets="All" />
-	</ItemGroup>
-    <!-- .NET Core packages -->
-	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-	</ItemGroup>
-    <!-- .NET Framework packages -->
-	<ItemGroup Condition="'$(TargetFramework)' == 'net46'">
-		<Reference Include="System" />
-		<Reference Include="System.Core" />
-		<Reference Include="System.Xml.Linq" />
-		<Reference Include="System.Data.DataSetExtensions" />
-		<Reference Include="Microsoft.CSharp" />
-		<Reference Include="System.Data" />
-		<Reference Include="System.Net.Http" />
-		<Reference Include="System.Xml" />
-	</ItemGroup>
+  <Import Project="..\Shared.msbuild" />
+  <ItemGroup>
+    <PackageReference Include="Cake.Core" Version="2.0.0" PrivateAssets="All" />
+    <PackageReference Include="Cake.Common" Version="2.0.0" PrivateAssets="All" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\asset\cake-argumenthelpers-nuget.png" Pack="true" Visible="false" PackagePath="images\icon.png" />
+  </ItemGroup>
 </Project>
